<resources>
    <string name="app_name">datebook</string>
    <string name="mainText">Запланировать дело</string>
    <string name="dateStart">10:00</string>
    <string name="dateFinish">11:00</string>
    <string name="events">Все мероприятия</string>
    <string name="time">Запланированное время</string>
    <string name="dash">—</string>
    <string name="event">Текущее мероприятие</string>
    <string name="titleTask">Название мероприятия</string>
    <string name="date">20 декабря 2023 12:00 – 13:00</string>
    <string name="currentDate">20 января 2023</string>
    <string name="description">Описание</string>
    <string name="mainTitleText">Создать событие</string>
    <string name="descriptionText">Описание События</string>
    <string name="dateText">Дата события</string>
    <string name="titleText">Название События</string>
    <string name="start">Начало</string>
    <string name="end">Конец</string>
    <string name="notificationFirst">Конечное время не может быть меньше начального</string>
    <string name="notificationSecond">Вы уверены, что хотите удалить это событие?</string>
    <string name="notificationThird">Заполните информацию о событии</string>
    <string name="confirm">Подтверждение</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>