<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:padding="@dimen/padding10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mainTitleText"
            android:textSize="@dimen/textSize20"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBackStack"
            android:layout_width="@dimen/margin30"
            android:layout_height="@dimen/margin40"
            android:layout_gravity="top|start"
            android:backgroundTint="@color/purple"
            android:drawableBottom="@drawable/revert" />

        <Button
            android:id="@+id/btnAddEvent"
            android:layout_width="@dimen/margin30"
            android:layout_height="@dimen/margin40"
            android:layout_gravity="top|end"
            android:backgroundTint="@color/purple"
            android:drawableBottom="@drawable/mark" />
    </FrameLayout>

    <EditText
        android:id="@+id/addEventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleText"
        android:textSize="@dimen/textSize16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/separator"
        android:orientation="horizontal"
        android:padding="@dimen/padding10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addEventName">

        <TextView
            android:id="@+id/titleDateStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/dateText"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addEventName" />

        <EditText
            android:id="@+id/addDate"
            android:layout_width="@dimen/width0"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight4"
            android:backgroundTint="@color/white"
            android:focusable="false"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearTitleTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearDate">

        <TextView
            android:id="@+id/titleStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight5"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addEventName" />

        <TextView
            android:id="@+id/titleEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight5"
            android:gravity="center"
            android:text="@string/end"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addEventName" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/separator"
        android:orientation="horizontal"
        android:padding="@dimen/padding10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearTitleTime">

        <EditText
            android:id="@+id/addFirstTime"
            android:layout_width="@dimen/width0"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight4"
            android:backgroundTint="@color/white"
            android:focusable="false"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16" />

        <EditText
            android:id="@+id/addLastTime"
            android:layout_width="@dimen/width0"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight4"
            android:backgroundTint="@color/white"
            android:focusable="false"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/addEventDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionText"
        android:textSize="@dimen/textSize16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearTime" />
</androidx.constraintlayout.widget.ConstraintLayout>